@@ -60,7 +60,6 @@ arch)
 	rm -f ${tmp}-all.h1 ${tmp}-all.h
 
 	${cgen} ${cgendir}/cgen-sim.scm \
-		-s ${cgendir} \
 		${cgenflags} \
 		-f "${archflags}" \
 		-m ${mach} \
@@ -125,7 +124,6 @@ cpu | decode | cpu-decode)
 	esac
 
 	${cgen} ${cgendir}/cgen-sim.scm \
-		-s ${cgendir} \
 		${cgenflags} \
 		-f "${archflags}" \
 		-m ${mach} \
@@ -187,7 +185,6 @@ defs)
 	rm -f ${tmp}-defs.h1 ${tmp}-defs.h
 	
 	${cgen} ${cgendir}/cgen-sim.scm \
-		-s ${cgendir} \
 		${cgenflags} \
 		-f "${archflags}" \
 		-m ${mach} \
@@ -205,7 +202,6 @@ desc)
 	rm -f ${tmp}-opc.h1 ${tmp}-opc.h
 
 	${cgen} ${cgendir}/cgen-opc.scm \
-		-s ${cgendir} \
 		${cgenflags} \
 		-OPC ${opcfile} \
 		-f "${archflags}" \
