@@ -1,3 +1,9 @@
+2023-08-24  Tom Tromey  <tom@tromey.com>
+
+	* cgen.sh: Don't pass "-s" to cgen.
+	* Makefile.in: Rebuild.
+	* Makefile.am (GUILE): Simplify.
+
 2023-07-31  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	PR 30705
